--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -31,6 +31,14 @@ limitations under the License.
   <artifactId>sqoop-docs</artifactId>
   <name>Sqoop Documentation</name>
 
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
+
 
   <reporting>
     <plugins>
