--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,37 @@ limitations under the License.
 
   <!-- Profiles for various supported Hadoop distributions -->
   <profiles>
+    <profile>
+      <id>fast</id>
+
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <excludedGroups>org.apache.sqoop.common.test.categories.SlowTests</excludedGroups>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <profile>
+      <id>slow</id>
+
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <groups>org.apache.sqoop.common.test.categories.SlowTests</groups>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
 
     <!-- Hadoop 1.x -->
     <profile>
@@ -639,11 +670,10 @@ limitations under the License.
           <version>2.3.2</version>
         </plugin>
 
-
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.12</version>
+          <version>2.13</version>
           <configuration>
             <forkMode>always</forkMode>
             <forkedProcessTimeoutInSeconds>3600</forkedProcessTimeoutInSeconds>
