--- a/client/pom.xml
+++ b/client/pom.xml
@@ -57,8 +57,7 @@ limitations under the License.
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-auth</artifactId>
-      <scope>provided</scope>
+      <artifactId>hadoop-common</artifactId>
     </dependency>
   </dependencies>
 
