SQOOP-1590: Sqoop2: PostgreSQL repository implementation
(Abraham Elmahrek via Jarek Jarcec Cecho)

--- a/pom.xml
+++ b/pom.xml
@@ -334,6 +334,11 @@ limitations under the License.
         <version>${project.version}</version>
       </dependency>
       <dependency>
+        <groupId>org.apache.sqoop.repository</groupId>
+        <artifactId>sqoop-repository-postgresql</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
         <groupId>org.apache.sqoop</groupId>
         <artifactId>connector-sdk</artifactId>
         <version>${project.version}</version>
