--- a/core/pom.xml
+++ b/core/pom.xml
@@ -40,11 +40,6 @@ limitations under the License.
 
     <dependency>
       <groupId>org.apache.sqoop</groupId>
-      <artifactId>sqoop-spi</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.sqoop</groupId>
       <artifactId>sqoop-common</artifactId>
     </dependency>
 
@@ -58,7 +53,10 @@ limitations under the License.
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
-
+    <dependency>
+      <groupId>org.apache.sqoop</groupId>
+      <artifactId>connector-sdk</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
