SQOOP-1901: Sqoop2: Support DRY code in IDF impementations and add JSONIDF
(Veena Basavaraj via Abraham Elmahrek)

--- a/connector/connector-sdk/pom.xml
+++ b/connector/connector-sdk/pom.xml
@@ -37,6 +37,10 @@ limitations under the License.
       <artifactId>joda-time</artifactId>
     </dependency>
     <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
