SQOOP-1751: Sqoop2: Rearrange LinkConfig and ToJobConfig of Kite Connector
(Qian Xu via Abraham Elmahrek)

--- a/connector/connector-kite/src/main/resources/kite-connector-config.properties
+++ b/connector/connector-kite/src/main/resources/kite-connector-config.properties
@@ -22,11 +22,8 @@ linkConfig.label = Link Configuration
 linkConfig.help = You must supply the information requested in order to create a \
   connection object.
 
-linkConfig.fileFormat.label = File format
-linkConfig.fileFormat.help = Format in which data should be serialized
-
-linkConfig.compression.label = Compression format
-linkConfig.compression.help = Compression that should be used for the data
+linkConfig.hdfsHostAndPort.label = HDFS host and port
+linkConfig.hdfsHostAndPort.help = Optional to override HDFS file system location.
 
 # To Job Config
 #
@@ -36,5 +33,8 @@ toJobConfig.help = You must supply the information requested in order to \
 
 toJobConfig.uri.label = Dataset URI
 toJobConfig.uri.help = Location to store dataset (i.e. \
-  "dataset:hdfs://host:port/user/me/job", \
-  "dataset:hive://host:port/table")
+  "dataset:hdfs://<host>[:port]/<path>/<namespace>/<dataset>", \
+  "dataset:hive://<namespace>/<dataset>")
+
+toJobConfig.fileFormat.label = File format
+toJobConfig.fileFormat.help = Specify storage format to create a dataset and cannot be changed.
