--- a/connector/connector-kite/src/main/resources/kite-connector-config.properties
+++ b/connector/connector-kite/src/main/resources/kite-connector-config.properties
@@ -38,3 +38,14 @@ toJobConfig.uri.help = Location to store dataset (i.e. \
 
 toJobConfig.fileFormat.label = File format
 toJobConfig.fileFormat.help = Specify storage format to create a dataset and cannot be changed.
+
+# From Job Config
+#
+fromJobConfig.label = From Kite Dataset Configuration
+fromJobConfig.help = You must supply the information requested in order to \
+  get information where you want to store your data.
+
+fromJobConfig.uri.label = Dataset URI
+fromJobConfig.uri.help = Location to load dataset (i.e. \
+  "dataset:hdfs://<host>[:port]/<path>/<namespace>/<dataset>", \
+  "dataset:hive://<namespace>/<dataset>")
