--- a/pom.xml
+++ b/pom.xml
@@ -138,11 +138,23 @@ limitations under the License.
     <profile>
       <id>fast</id>
 
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+
       <build>
         <plugins>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <excludedGroups>slow</excludedGroups>
+            </configuration>
+          </plugin>
+
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
             <configuration>
               <excludedGroups>slow</excludedGroups>
             </configuration>
@@ -154,11 +166,25 @@ limitations under the License.
     <profile>
       <id>slow</id>
 
+      <activation>
+        <property>
+          <name>slow</name>
+        </property>
+      </activation>
+
       <build>
         <plugins>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <groups>slow</groups>
+            </configuration>
+          </plugin>
+
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
             <configuration>
               <groups>slow</groups>
             </configuration>
@@ -686,6 +712,12 @@ limitations under the License.
               </property>
             </properties>
           </configuration>
+        </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>2.18.1</version>
         </plugin>
       </plugins>
     </pluginManagement>
