SQOOP-2029: Sqoop2: Get jobs by connector
(Veena Basavaraj via Abraham Elmahrek)

--- a/shell/src/main/resources/shell-resource.properties
+++ b/shell/src/main/resources/shell-resource.properties
@@ -144,7 +144,8 @@ show.driver_usage = Usage: show driver
 show.prompt_driver_opts = @|bold Driver specific options: |@\nPersistent id: {0}
 
 show.prompt_display_all_jobs = Display all jobs
-show.prompt_display_job_jid = Display jobwith given jid
+show.prompt_display_all_jobs_cid = Display all jobs with given cid
+show.prompt_display_job_jid = Display job with given jid
 show.job_usage = Usage: show job
 show.prompt_jobs_to_show = @|bold {0} job(s) to show: |@
 show.prompt_job_info = Job with id {0} and name {1} (Enabled: {2}, Created by {3} at {4}, Updated by {5} at {6})
