SQOOP-1804: Add editable and override attribute to inputs
(Veena Basavaraj via Jarek Jarcec Cecho)

--- a/shell/src/main/resources/shell-resource.properties
+++ b/shell/src/main/resources/shell-resource.properties
@@ -211,6 +211,8 @@ config.displayer.help = Help
 config.displayer.input = Input
 config.displayer.type = Type
 config.displayer.sensitive = Sensitive
+config.displayer.editable = Editable By
+config.displayer.overrides = Overrides
 config.displayer.size = Size
 config.displayer.possible_values = Possible values
 config.displayer.unsupported_datatype = Unsupported data type
