--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -22,7 +22,7 @@ limitations under the License.
   <parent>
     <groupId>org.apache</groupId>
     <artifactId>sqoop</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>1.99.5</version>
   </parent>
 
   <groupId>org.apache.sqoop</groupId>
