SQOOP-2109: Sqoop2: Shell module is including test dependencies when building binary artifact
(Jarek Jarcec Cecho via Abraham Elmahrek)

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -35,6 +35,7 @@ limitations under the License.
     <dependency>
       <groupId>org.apache.sqoop</groupId>
       <artifactId>sqoop-common-test</artifactId>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
