--- a/shell/pom.xml
+++ b/shell/pom.xml
@@ -59,6 +59,12 @@ limitations under the License.
       <groupId>jline</groupId>
       <artifactId>jline</artifactId>
       <version>0.9.94</version>
+      <exclusions>
+        <exclusion>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.fusesource.jansi</groupId>
@@ -90,6 +96,8 @@ limitations under the License.
                   <goal>copy-dependencies</goal>
                 </goals>
                 <configuration>
+                  <includeScope>runtime</includeScope>
+                  <excludeScope>test</excludeScope>
                   <outputDirectory>${project.build.directory}/lib</outputDirectory>
                 </configuration>
               </execution>
