SQOOP-1978: Sqoop2: Command line support
(Abraham Elmahrek via Jarek Jarcec Cecho)

--- a/shell/src/main/resources/shell-resource.properties
+++ b/shell/src/main/resources/shell-resource.properties
@@ -77,11 +77,13 @@ create.link_successful = New link was successfully created with \
   validation status {0} and persistent id {1}
 create.job_successful = New job was successfully created with validation \
   status {0}  and persistent id {1}
+create.role_successful = New role was successfully created with name {0}
 create.creating_link = Creating link for connector with id {0}
 create.creating_job = Creating job for links with from id {0} and to id {1}
 
 # Delete command
 delete.description = Delete existing object in Sqoop repository
+delete.role_successful = Deleted role {0} successfully
 
 # Enable command
 enable.description = Enable object in Sqoop repository
@@ -186,6 +188,20 @@ stop.description = Stop job
 # Status command
 status.description = Display status of a job
 
+# Grant command
+grant.description = Grant access to roles and assign privileges
+grant.privilege_successful = Granted action {0} on resource {1}{2} to \
+  principal {3} successfully
+grant.privilege_successful_with_grant = with grant
+grant.role_successful = Granted role {0} to principal {1} successfully
+
+# Revoke command
+revoke.description = Revoke access from roles and remove privileges
+revoke.privilege_successful = Revoked action {0} on resource {1}{2} to \
+  principal {3} successfully
+revoke.privilege_successful_with_grant = with grant
+revoke.role_successful = Revoked role {0} from principal {1} successfully
+
 # Various Table headers
 table.header.id = Id
 table.header.name = Name
@@ -234,3 +250,11 @@ submission.server_url = Server URL
 submission.from_schema = Source Connector schema
 submission.to_schema = Target Connector schema
 
+# Grant/revoke resources
+prompt.role = "Role name"
+prompt.resource_type = "Resource type"
+prompt.resource = "Resource name"
+prompt.action = "Action"
+prompt.principal_type = "Principal type"
+prompt.principal = "Principal"
+prompt.with_grant = "With grant"
