SQOOP-2123: Sqoop2: Copy shell libraries only in binary package profile
(Jarek Jarcec Cecho via Abraham Elmahrek)

--- a/shell/pom.xml
+++ b/shell/pom.xml
@@ -80,9 +80,9 @@ limitations under the License.
 
   <profiles>
     <profile>
-      <id>dist</id>
+      <id>binary</id>
       <activation>
-        <activeByDefault>true</activeByDefault>
+        <activeByDefault>false</activeByDefault>
       </activation>
       <build>
         <plugins>
