SQOOP-2144: Sqoop2: Show command for CLI
(Abraham Elmahrek via Jarek Jarcec Cecho)

--- a/shell/src/main/resources/shell-resource.properties
+++ b/shell/src/main/resources/shell-resource.properties
@@ -141,6 +141,8 @@ show.connector_usage = Usage: show connector
 show.prompt_connectors_to_show = @|bold {0} connector(s) to show: |@
 show.prompt_connector_info = Connector with id {0}:\n  Name: {1} \n  \
 Class: {2}\n  Version: {3}\n  Supported Directions {4}
+show.role.bad_arguments_principal_type = @|bold principal |@ and @|bold principal-type |@ must be used together.
+show.privilege.bad_arguments_resource_type = @|bold resource |@ and @|bold resource-type |@ must be used together.
 
 show.driver_usage = Usage: show driver
 show.prompt_driver_opts = @|bold Driver specific options: |@\nPersistent id: {0}
@@ -217,6 +219,13 @@ table.header.eid = External Id
 table.header.status = Status
 table.header.date = Last Update Date
 table.header.enabled = Enabled
+table.header.role.name = Role Name
+table.header.privilege.action = Action
+table.header.privilege.with_grant = With Grant
+table.header.resource.name = Resource Name
+table.header.resource.type = Resource Type
+table.header.principal.name = Principal Name
+table.header.principal.type = Principal Type
 
 #Config displayer resources
 config.displayer.link = link
