SQOOP-1805: Sqoop2: GenericJdbcConnector: Delta read support
(jarek Jarcec Cecho via Abraham Elmahrek)

--- a/connector/connector-generic-jdbc/src/main/resources/generic-jdbc-connector-config.properties
+++ b/connector/connector-generic-jdbc/src/main/resources/generic-jdbc-connector-config.properties
@@ -112,9 +112,13 @@ toJobConfig.stageTableName.help = Name of the staging table to use (Optional)
 toJobConfig.shouldClearStageTable.label = Should clear stage table
 toJobConfig.shouldClearStageTable.help = Indicate if the stage table should be cleared (Defaults to false)
 
-# Placeholders to have some entities created
-ignored.label = Ignored
-ignored.help = This is completely ignored
+# Incremental related configuration
+incrementalRead.label = Incremental read
+incrementalRead.help = Configuration related to incremental read
 
-ignored.ignored.label = Ignored
-ignored.ignored.help = This is completely ignored
+incrementalRead.checkColumn.label = Check column
+incrementalRead.checkColumn.help = Column that is checked during incremental read for new values
+
+incrementalRead.lastValue.label = Last value
+incrementalRead.lastValue.help = Last read value, fetch will resume with higher values
+
