--- a/connector/connector-kite/src/main/resources/kite-connector-config.properties
+++ b/connector/connector-kite/src/main/resources/kite-connector-config.properties
@@ -22,8 +22,8 @@ linkConfig.label = Link Configuration
 linkConfig.help = You must supply the information requested in order to create a \
   connection object.
 
-linkConfig.hdfsHostAndPort.label = HDFS host and port
-linkConfig.hdfsHostAndPort.help = Optional to override HDFS file system location.
+linkConfig.authority.label = HDFS host and port
+linkConfig.authority.help = Optional to override HDFS file system location.
 
 # To Job Config
 #
