SQOOP-1949: Sqoop2: HDFS append only support
(Jarek Jarcec Cecho via Abraham Elmahrek)

--- a/connector/connector-hdfs/src/main/resources/hdfs-connector-config.properties
+++ b/connector/connector-hdfs/src/main/resources/hdfs-connector-config.properties
@@ -48,8 +48,8 @@ toJobConfig.customCompression.help = Full class name of the custom compression
 toJobConfig.outputDirectory.label = Output directory
 toJobConfig.outputDirectory.help = Output directory for final data
 
-toJobConfig.ignored.label = Ignored
-toJobConfig.ignored.help = This value is ignored
+toJobConfig.appendMode.label = Append mode
+toJobConfig.appendMode.help = Append new files to existing directory if the output directory already exists
 
 toJobConfig.overrideNullValue.label = Override null value
 toJobConfig.overrideNullValue.help = If set to true, then the null value will \
