SQOOP-2016: Sqoop2: Create integration test for JDBC to Hive
(Abraham Elmahrek via Jarek Jarcec Cecho)

--- a/test/pom.xml
+++ b/test/pom.xml
@@ -113,6 +113,18 @@ limitations under the License.
     </dependency>
 
     <dependency>
+      <groupId>org.apache.hive</groupId>
+      <artifactId>hive-jdbc</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.hive</groupId>
+      <artifactId>hive-service</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
       <groupId>org.codehaus.cargo</groupId>
       <artifactId>cargo-core-container-tomcat</artifactId>
     </dependency>
