--- a/server/pom.xml
+++ b/server/pom.xml
@@ -24,7 +24,7 @@ limitations under the License.
   <parent>
     <groupId>org.apache</groupId>
     <artifactId>sqoop</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>1.99.6</version>
   </parent>
 
   <groupId>org.apache.sqoop</groupId>
@@ -103,7 +103,7 @@ limitations under the License.
     <dependency>
       <groupId>org.apache.sqoop.connector</groupId>
       <artifactId>sqoop-connector-mysql-jdbc</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>1.99.6</version>
     </dependency>
 -->
 
