--- a/connector/connector-kafka/pom.xml
+++ b/connector/connector-kafka/pom.xml
@@ -21,7 +21,7 @@ limitations under the License.
   <parent>
     <artifactId>connector</artifactId>
     <groupId>org.apache.sqoop</groupId>
-    <version>1.99.6</version>
+    <version>2.0.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
