--- a/repository/repository-postgresql/pom.xml
+++ b/repository/repository-postgresql/pom.xml
@@ -24,7 +24,7 @@ limitations under the License.
   <parent>
     <groupId>org.apache.sqoop</groupId>
     <artifactId>repository</artifactId>
-    <version>1.99.6</version>
+    <version>2.0.0-SNAPSHOT</version>
   </parent>
 
   <groupId>org.apache.sqoop.repository</groupId>
