SQOOP-2309: Sqoop2: Add to link id in show job --all command
(Richard Zhou via Abraham Elmahrek)

--- a/shell/src/main/resources/shell-resource.properties
+++ b/shell/src/main/resources/shell-resource.properties
@@ -153,7 +153,8 @@ show.prompt_display_job_jid = Display job with given jid
 show.job_usage = Usage: show job
 show.prompt_jobs_to_show = @|bold {0} job(s) to show: |@
 show.prompt_job_info = Job with id {0} and name {1} (Enabled: {2}, Created by {3} at {4}, Updated by {5} at {6})
-show.prompt_job_lid_cid_info = Using link id {0} and Connector id {1}
+show.prompt_job_from_lid_info = From link: {0}
+show.prompt_job_to_lid_info = To link: {0}
 
 show.prompt_display_all_submissions = Display all submissions
 show.prompt_display_all_submissions_jid = Display all submissions given jid
