--- a/connector/connector-hdfs/src/main/resources/hdfs-connector-config.properties
+++ b/connector/connector-hdfs/src/main/resources/hdfs-connector-config.properties
@@ -24,7 +24,7 @@ linkConfig.help = Here you supply information necessary to connect to HDFS
 linkConfig.uri.label = HDFS URI
 linkConfig.uri.help = HDFS URI used to connect to HDFS
 
-linkConfig.confDir.label = Hadoop conf directory:
+linkConfig.confDir.label = Hadoop conf directory
 linkConfig.confDir.help = Directory with Hadoop configuration files. The connector will load all -site.xml files.
 
 # To Job Config
