SQOOP-2308: Sqoop2: Fix a typo for hdfs-connector-config.properties and kafka-connector-config.properties
(Richard Zhou via Abraham Elmahrek)

--- a/connector/connector-hdfs/src/main/resources/hdfs-connector-config.properties
+++ b/connector/connector-hdfs/src/main/resources/hdfs-connector-config.properties
@@ -29,7 +29,7 @@ linkConfig.confDir.help = Directory with Hadoop configuration files. The connect
 
 # To Job Config
 #
-toJobConfig.label = ToJob configuration
+toJobConfig.label = To HDFS configuration
 toJobConfig.help = You must supply the information requested in order to \
                    get information where you want to store your data.
 
@@ -62,7 +62,7 @@ toJobConfig.nullValue.help = Use this particular character or sequence of charac
 
 # From Job Config
 #
-fromJobConfig.label = From Job configuration
+fromJobConfig.label = From HDFS configuration
 fromJobConfig.help = Specifies information required to get data from Hadoop ecosystem
 
 fromJobConfig.inputDirectory.label = Input directory
