--- a/connector/connector-kafka/src/main/resources/kafka-connector-config.properties
+++ b/connector/connector-kafka/src/main/resources/kafka-connector-config.properties
@@ -31,7 +31,7 @@ linkConfig.zookeeperConnect.help = Address of Zookeeper used by the Kafka cluste
                                    use host:port\kafka
 # To Job Config
 #
-toJobConfig.label = ToJob configuration
+toJobConfig.label = To Kafka configuration
 toJobConfig.help = Configuration necessary when writing data to Kafka
 
 toJobConfig.topic.label = Kafka topic
