--- a/connector/pom.xml
+++ b/connector/pom.xml
@@ -38,6 +38,7 @@ limitations under the License.
     <module>connector-hdfs</module>
     <module>connector-kite</module>
     <module>connector-kafka</module>
+    <module>connector-sftp</module>
     <!-- Uncomment and finish connectors after sqoop framework will become stable
     <module>connector-mysql-jdbc</module>
     <module>connector-mysql-fastpath</module>
