SQOOP-2342: Sqoop2: Provide an external application classloader
(Abraham Elmahrek via Jarek Jarcec Cecho)

--- a/core/src/test/resources/test_config.properties
+++ b/core/src/test/resources/test_config.properties
@@ -23,3 +23,6 @@ org.apache.sqoop.log4j.logger.org.apache.sqoop=debug,console
 org.apache.sqoop.log4j.appender.console=org.apache.log4j.ConsoleAppender
 org.apache.sqoop.log4j.appender.console.layout=org.apache.log4j.PatternLayout
 org.apache.sqoop.log4j.appender.console.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
+
+# Extra classpath
+org.apache.sqoop.classpath.extra=core/src/test/resources/test_config.properties
