SQOOP-2378: Sqoop2: Revoke all privileges command
(Dian Fu via Abraham Elmahrek)

--- a/shell/src/main/resources/shell-resource.properties
+++ b/shell/src/main/resources/shell-resource.properties
@@ -202,6 +202,8 @@ grant.role_successful = Granted role {0} to principal {1} successfully
 revoke.description = Revoke access from roles and remove privileges
 revoke.privilege_successful = Revoked action {0} on resource {1}{2} to \
   principal {3} successfully
+revoke.all_privileges_successful = Revoked all privileges from \
+  principal {0} successfully
 revoke.privilege_successful_with_grant = with grant
 revoke.role_successful = Revoked role {0} from principal {1} successfully
 
