SQOOP-2393: Add Qian Xu to the developers list
(Abraham Elmahrek via Qian Xu)

--- a/pom.xml
+++ b/pom.xml
@@ -909,5 +909,13 @@ limitations under the License.
         <role>Committer</role>
       </roles>
     </developer>
+    <developer>
+      <id>qxu</id>
+      <name>Qian Xu</name>
+      <organization>Intel</organization>
+      <roles>
+        <role>Committer</role>
+      </roles>
+    </developer>
   </developers>
 </project>
